--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-image-picker": "^7.1.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.7.4",
