--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "@stripe/stripe-react-native": "^0.37.0",
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-date-picker": "^4.4.0",
